--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Thailand') # add code here"
+    "countries.pop # add code here"
    ]
   },
   {
