Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,11 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thailand'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.pop # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
