Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,22 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Thailand'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries.append() # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -276,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('') # add code here"
    ]
   },
   {
