--- a/index.ipynb
+++ b/index.ipynb
@@ -439,34 +439,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
+       "['Canada',\n",
        " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'Malta',\n",
+       " 'Finland',\n",
+       " 'Croatia',\n",
+       " 'Italy',\n",
+       " 'USA',\n",
+       " 'South Korea']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
